--- a/console/robots/css/style.css
+++ b/console/robots/css/style.css
@@ -20,13 +20,14 @@ body {
 p {
   color: white !important;
   font-family: 'Raleway';
+  font-size: 22px;
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
 }
 
 b {
-  text-decoration: underline
+  text-decoration-style: solid
 }
 
 .arm,
